# gusled-gear-academy

./: .gitignore  README.md
escrow/: Cargo.toml
escrow/escrow-io/src/: lib.rs
escrow/escrow-state/: Cargo.toml
escrow/src/: lib.rs
escrow/tests/: escrow_test.rs
hello-world/: .gitignore  Cargo.toml  build.rs
hello-world/frontend/: .env  .env.example  .eslintignore  .eslintrc  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
hello-world/frontend/src/: app.scss  app.tsx  env.d.ts  global.css  global.d.ts  main.tsx
hello-world/frontend/src/app/: consts.ts
hello-world/frontend/src/app/context/: ctx-app.tsx  ctx-battle.tsx  ctx-ft-balance.tsx  ctx-ft-store.tsx  ctx-lesson.tsx  ctx-tamagotchi.tsx  index.ts
hello-world/frontend/src/app/hocs/: index.tsx
hello-world/frontend/src/app/hooks/: use-battle.ts  use-ft-balance.ts  use-ft-store.ts  use-lesson-5.ts  use-metadata.ts  use-read-wasm-state.ts  use-tamagotchi.ts
hello-world/frontend/src/app/types/: battles.ts  ft-store.ts  ft-wallet.ts  lessons.ts  tamagotchi.ts
hello-world/frontend/src/app/utils/: form-validations.ts  get-lesson-assets.ts  get-tamagotchi-age.ts  index.ts
hello-world/frontend/src/assets/meta/: meta5.txt
hello-world/frontend/src/assets/styles/: _shared.scss
hello-world/frontend/src/components/ui/icon/: icon.d.ts  (+2 more)
hello-world/frontend/src/lib/: utils.ts
hello-world/frontend/src/pages/: battle.tsx  home.tsx  index.tsx  store.tsx
hello-world/io/: Cargo.toml
hello-world/io/src/: lib.rs
hello-world/src/: lib.rs
hello-world/tests/: hello_world_test.rs
(+68 files in other folders)
