[package]
name = "escrow"
version = "0.1.0"
edition = "2021"

[dependencies]
gstd = { git = "https://github.com/gear-tech/gear.git", features = ["debug"], rev="5c685d0f15c412ab6ee019ceaf7ce084426dfb68"}
parity-scale-codec = { version = "3", default-features = false }
scale-info = { version = "2", default-features = false }
escrow-io = { path = "escrow-io" }

[build-dependencies]
gear-wasm-builder = { git = "https://github.com/gear-tech/gear.git", rev="5c685d0f15c412ab6ee019ceaf7ce084426dfb68" }
escrow-io = { path = "escrow-io" }

[dev-dependencies]
gtest = { git = "https://github.com/gear-tech/gear.git", rev="5c685d0f15c412ab6ee019ceaf7ce084426dfb68"}